--- a/package.json
+++ b/package.json
@@ -4,19 +4,27 @@
   "private": true,
   "devDependencies": {
     "babel-core": "^6.14.0",
+    "babel-preset-airbnb": "^2.0.0",
     "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-1": "^6.13.0",
     "chai": "^3.5.0",
     "chai-immutable": "^1.6.0",
     "dotenv": "^2.0.0",
+    "enzyme": "^2.4.1",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "^9.5.0",
     "mocha": "^3.0.2",
+    "react-addons-test-utils": "^15.3.1",
     "react-scripts": "0.2.3"
   },
   "dependencies": {
     "axios": "^0.14.0",
     "express": "^4.14.0",
     "immutable": "^3.8.1",
+    "material-ui": "^0.15.4",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "yelp": "^1.0.1"
   },
@@ -25,7 +33,9 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "start:srv": "babel-node server.js",
-    "test:srv": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive",
+    "test:cli": "mocha --compilers js:babel-core/register --require ignore-styles --require ./test/test_setup.js \"test/src/*_spec.js\"",
+    "test:cli2": "mocha --compilers js:babel-core/register --require ignore-styles --require ./test/test_setup.js \"src/components/**/*_spec.js\"",
+    "test:srv": "mocha --compilers js:babel-core/register --require ./test/test_helper.js \"test/srv/*_spec.js\"",
     "test:srv:watch": "npm run test:srv -- --watch"
   },
   "eslintConfig": {
@@ -33,7 +43,9 @@
   },
   "babel": {
     "presets": [
-      "es2015"
+      "es2015",
+      "airbnb",
+      "stage-1"
     ]
   }
 }
