--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "yelp": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:dev": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "start:srv": "babel-node server.js",
+    "start": "babel-node server.js",
     "start:socket": "babel-node mainio.js",
     "test": "npm run test:cli&&npm run test:srv",
     "test:cli": "mocha --compilers js:babel-core/register --require ignore-styles --require ./test/test_setup.js \"src/**/**/*_spec.js\"",
