--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "express": "^4.14.0",
     "immutable": "^3.8.1",
     "material-ui": "^0.15.4",
+    "moment": "^2.15.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-facebook-login-component": "^0.5.2",
+    "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "yelp": "^1.0.1"
@@ -36,10 +39,10 @@
     "start": "node server.js",
     "start:isdev": "set NODE_ENV=development&&node server.js",
     "start:socket": "babel-node mainio.js",
-    "test": "npm run test:cli&&npm run test:srv",
-    "test:cli": "mocha --compilers js:babel-core/register --require ignore-styles --require ./test/test_setup.js \"src/**/**/*_spec.js\"",
-    "test:srv": "mocha --compilers js:babel-core/register --require ./test/test_helper.js \"test/srv/*_spec.js\"",
-    "test:srv:watch": "npm run test:srv -- --watch"
+    "test": "npm run test:client&&npm run test:server",
+    "test:client": "mocha --compilers js:babel-core/register --require ignore-styles --require ./test/test_setup.js \"src/**/**/*_spec.js\"",
+    "test:server": "mocha --compilers js:babel-core/register --require ./test/test_helper.js \"test/srv/*_spec.js\"",
+    "test:server:watch": "npm run test:server -- --watch"
   },
   "eslintConfig": {
     "extends": "./node_modules/react-scripts/config/eslint.js"
