--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
     "yelp": "^1.0.1"
   },
   "scripts": {
